# grid_synthesis

./: .gitignore  Cargo.toml  README.md  compile.sh  lazy_sync.sh  main.rs  sync_on_git.sh
binaries/: main
src/: .main.rs.swp  lib.rs  main.rs
src/algorithms/: exact_synth.rs  exact_synth_hashtable_lookup.rs  inexact_synth.rs  lll.rs  local_prime_factorization.rs  matrix_tests.rs  mod.rs  near_int.rs
src/structs/: .Dyad.rs.swp  Dyad.rs  mod.rs  rect.rs  sunimat.rs  unimat.rs
src/structs/rings/: .complex.rs.swp  .domega.rs.swp  .dyad.rs.swp  .local_ring.rs.swp  .mod.rs.swp  .quaternion.rs.swp  .unimat.rs.swp  .zroot2.rs.swp  complex.rs  cyclotomic.rs  domega.rs  domega_new.rs  dyad.rs  int_localization.rs  local_ring.rs  local_zroot2.rs  mod.rs  quaternion.rs  special_values.rs  unimat.rs  zomega.rs  zroot2.rs
src/tests/: .mod.rs.swp  exact_gate_tests.rs  exact_synth_hashtable_lookup_tests.rs  exact_synth_tests.rs  hashtable_tests.rs  inexact_synth_tests.rs  lll_tests.rs  matrix_tests.rs  mod.rs  prime_factorization_tests.rs  ring_tests.rs
