[package]
name = "grid_synthesis"
version = "0.1.0"
edition = "2021"
authors = ["Nihar Gargava <nihargargava@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For rings
num-complex = "0.4"
num-traits = "0.2"

# For algorithms
lll-rs = "1.2"


# For testing
rand = "0.8.5"
