[package]
name = "grid_synthesis"
version = "0.1.0"
edition = "2021"
authors = ["Nihar Gargava <nihargargava@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For rings
num-complex = "0.4"
num-traits = "0.2"

# For algorithms

## Should be possible to write my own. It's easy
## In fact, this needs GMP for some reason and I should positively replace it
lll-rs = "0.2" 

nalgebra = "0.31.4" # standard matrix ops

prime_factorization = "1.0.3" # Might replace it by a lookup table



# For testing
rand = "0.8.5"
