[package]
name = "grid_synthesis"
version = "0.1.0"
edition = "2021"
authors = ["Nihar Gargava <nihargargava@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For rings
# f128 = "0.2.9"
num = "0.4"
num-complex = "0.4"
num-traits = "0.2"

# For algorithms
nalgebra = "0.31.4" # standard matrix ops
prime_factorization = "1.0.3" # Might replace it by a lookup table



# For testing
rand = "0.8.5"
